@@ -1,5 +1,5 @@
 dev-python/setuptools >=app-admin/eselect-python-20091230 =dev-lang/python-2*
-dev-python/setuptools || ( >=dev-lang/python-2.6 dev-python/simplejson ) >=app-admin/eselect-python-20091230 =dev-lang/python-2*
+dev-python/setuptools || ( >=dev-lang/python-2.7 dev-python/simplejson ) >=app-admin/eselect-python-20091230 =dev-lang/python-2*
 0
 mirror://pypi/g/github-cli/github-cli-0.2.9.tar.gz
 
