@@ -4,14 +4,14 @@ Hash: SHA1
 AUX github-cli-0.2.9-Use_pythons_json.patch 2187 RMD160 53e1d03e80dc202c63592d4b7734857946162168 SHA1 c1abceac8cdee8a111b038368056bb6ef0d9db78 SHA256 2bb57139818c8e6e1e0b26465b12103076c6b19eab63981d3030aa77650a3d49
 DIST github-cli-0.2.9.tar.gz 9269 RMD160 9bec7f97428a6400ea2ba3747a4e70bb08e43224 SHA1 4e0f7b036ac7e5afe813df1d57e5eb1eda7e110d SHA256 a62738262798ab7e22998a04d002351ac57c6a7e76d7ebd058091bb76472e5a0
 DIST github-cli-0.3.0.tar.gz 9498 RMD160 af0d375a171d93a14d930b7f3585864c884ddabf SHA1 6f10485306e0f0b65ff23d5d6acb4ed8c3aa95be SHA256 b9573fdd413e6eb557b4e5297687c4be52adbe4941f38b6cdd0489d82907d097
-EBUILD github-cli-0.2.9.ebuild 637 RMD160 23f29ea8f8ec1415f4218f5f8ca07d73bbdc4d42 SHA1 65cbad7b19ed979c28eb1628bf2b6615d5e87210 SHA256 3076c7213cb086051b2490e466e9c504c2a537915820792311fca82df66776ff
-EBUILD github-cli-0.3.0.ebuild 644 RMD160 874f4daa9ac2c8bfc0809616e461f8fbac94e0be SHA1 afd40a4f799512ac1d64cbdc4161df9c7da888ad SHA256 9a2d8edaa9264a4844e938864c3606943ad6a9b8906e31fa6cd79f5857f588a6
-MISC ChangeLog 689 RMD160 c73a7b93859f1309ceab999f78d78f62cebfc185 SHA1 578e903bfc7836e608b3832e1f7f14b6f9cf16f0 SHA256 1593d42c075cfc354ef9bba17581d00042aa8e4e98e8152a9056d46910bd49f9
+EBUILD github-cli-0.2.9.ebuild 759 RMD160 6cb6df1800a673a1da5dfcfd283bd7358d60fda8 SHA1 8cf6433fd871bdd90b760845d0abf52c44ab5b15 SHA256 34bd929926bb5bb227d2b8acce333372aad1869622596002fe240a5d5ca36a88
+EBUILD github-cli-0.3.0.ebuild 766 RMD160 e5cf9923bc030a66139cd50ab755f3276edddbf5 SHA1 6f427481aa843f99ccabbfe0e8aa91d0a2c2825c SHA256 198a52732dff29a5c3ec9f9cdb4cabe9d74c41fae8ed95ee355103f209470dbf
+MISC ChangeLog 885 RMD160 759f1602f54db8efab5fd0cfe383b85aec48510d SHA1 e6d81fe5dbeb308a3337d06f36fc85ab8f441544 SHA256 09c13386b5fe4be28a868f36ee5b7d2fc2b43e23b7df9b4ab478698385865fe2
 MISC metadata.xml 644 RMD160 8fb3302e0cefaa95cf44d15279d7f3ecf96d4e99 SHA1 a91767b15995c4cf7dc9f2a92eac195940d2c228 SHA256 a7c4c3392b57fabe833fcbadd38bb0d2ccce69d319be50b4c29a5dee336a1828
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkyZCwUACgkQzJrj3cAXR0lWzQCbBKfyLJL1nNCavuz5k7mKHolZ
-YxwAoLZYa8EPAPdMC6NK7V8/cjchpmKB
-=ot5C
+iEYEARECAAYFAkyZC+QACgkQzJrj3cAXR0mViACeJSjD6JV6WUwwwUiHWZeF8DVu
+8ugAoIPJanD0mQ7lQCPg8yIw2LP0r2oh
+=Wdbo
 -----END PGP SIGNATURE-----
