@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Sep 2010; James Rowe <jnrowe@gmail.com> github-cli-0.2.9.ebuild,
+  github-cli-0.3.0.ebuild:
+  simplejson is needed with Python 2.6 too, as the stdlib version is too old
+  to work correctly.
+
 *github-cli-0.3.0 (21 Sep 2010)
 
   21 Sep 2010; James Rowe <jnrowe@gmail.com> +github-cli-0.3.0.ebuild:
